route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webserver-1
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: webserver-1
